# changit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  act.mk  gui.py  index.html  main.py  pyproject.toml
.github/workflows/: deploy-setup.yml
assets/css/: style.css
docs/: CNAME  index.html
docs/about/: index.html
docs/assets/css/: style.css
src/: constants.py  manager.py  operations.py  writer.py
src/gui/: app.py  components.py  handlers.py  utils.py
src/llm/: base.py  claude.py  openai.py
